--- a/src/app/components/category-icons/categoryIcons.module.css
+++ b/src/app/components/category-icons/categoryIcons.module.css
@@ -15,6 +15,15 @@
   max-width: 1800px;
   width: 100%;
   color: var(--fontColBtnBuy);
+
+  .tab {
+    color: var(--fontColBtnBuy);
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+
+  .tab:hover {
+    color: var(--color-bg-button-hover);
+  }
 }
 
 .tabButton:hover {
@@ -26,7 +35,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
   margin: 1rem;
-  gap: 5px;
+  gap: .5rem;
 
   a.href {
     display: flex;
@@ -102,4 +111,39 @@
   font-size: .8rem;
   text-align: center;
   white-space: nowrap;
+}
+
+@media (prefers-color-scheme: dark) {
+
+  .categoryList {
+    background-color: var(--backgrond);
+    color: white;
+
+    li.home,
+    li.computing,
+    li.vehicle,
+    li.beauty,
+    li.woman,
+    li.men,
+    li.sports {
+      border: 1px solid var(--borderColBtnBuy);
+      background-color: var(--bgColorCategoryList);
+    }
+
+    li.home:hover,
+    li.computing:hover,
+    li.vehicle:hover,
+    li.beauty:hover,
+    li.woman:hover,
+    li.men:hover,
+    li.sports:hover {
+      background-color: var(--color-bg-button);
+      color: var(--foreground);
+    }
+  }
+
+  img.product {
+    opacity: 0.9;
+    filter: invert(1) brightness(2);
+  }
 }
