--- a/src/app/nyhetsbrev/page.module.css
+++ b/src/app/nyhetsbrev/page.module.css
@@ -22,20 +22,23 @@
 
 
 .emailInput {
-
     padding: 0.3rem;
     border: 0;
-    background-color: transparent !important;
+    border-radius: 5px;
+    background-color: var(--transparent) !important;
+    color: var(--inputTextColor)!important;
     outline: 0;
 }
 
 .emailInput:autofill {
-    background-color: transparent !important;
+    background-color: var(--transparent) !important;
+    color: var(--inputTextColor)!important;
 }
 
 .emailInput:-webkit-autofill,
 .emailInput:-webkit-autofill:focus {
     transition: background-color 0s 600000s, color 0s 600000s !important;
+    color: var(--inputTextColor) !important;
 }
 
 
