--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -64,7 +64,7 @@
 }
 
 .advertText {
-  color: #a94f4f;
+  color: var(--colorAdvertText);
   text-align: left;
   font-size: clamp(1.5rem, 1.5vw, 2.5rem);
   margin: 0 .1em 0 1.5rem;
